--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "webpack serve --open",
     "build": "webpack --mode production"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "openai": "^4.79.1",
     "phaser": "^3.87.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
